# state-government-skill

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.yml  endpoints.yml  pyproject.toml  rephraser.py  test_conversations.sh
actions/: __init__.py  action_check_license_status.py  action_check_snap_eligibility.py
data/: patterns.yml
data/flows/: chitchat.yml  decline_behavior_modification.yml  drivers_license.yml  schedule_snap_appointment.yml  snap_benefits.yml  unsupported.yml
docs/faq/: georgia_services.txt
domain/: chitchat.yml  domain.yml  shared.yml
mcp_server/: server.py
prompt_templates/: response-rephraser-template.jinja2
sub_agents/appointment_selector/: config.yml
sub_agents/booking_agent/: config.yml
sub_agents/snap_agent/: config.yml
tests/: test-viewer.jsx  test_debug_rephrase.yml  test_greeting_chitchat.yml  test_license_flows.yml  test_multi_turn.yml  test_out_of_scope.yml  test_snap_flows.yml  test_user_emotions.yml
